--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "next": "14.2.13",
     "next-auth": "^4.24.7",
+    "openssl": "^2.0.0",
+    "openssl-nodejs": "^1.0.5",
     "react": "^18",
     "react-dom": "^18"
   },
